resolved horizontal scroll issue

--- a/developerFolio/src/containers/greeting/Greeting.scss
+++ b/developerFolio/src/containers/greeting/Greeting.scss
@@ -134,7 +134,7 @@
   align-items: flex-start;
   justify-content: flex-start;
   min-height: 100vh;
-  width: 100vw;
+  //width: 100vw;
   background: linear-gradient(to right, #000000 0%, rgba(0, 0, 0, 0.7) 35%, rgba(255,255,255,0.0) 70%), url('../../assets/images/My_bgphoto.jpeg') no-repeat center center fixed;
   background-size: cover;
   position: relative;
